0023389: (OCC 6.5.3 regression) BRepAlgoAPI_Cut returns invalid solid

Adding test case boolean/bopcut_complex/P8